--- a/專案製作規範.md
+++ b/專案製作規範.md
@@ -220,7 +220,6 @@ Closed（已結案）
 
 **建議技術棧：**
 - **框架選擇：** Next.js (Full-stack) 或 NestJS (API-only)
-- **ORM：** Prisma（類型安全、遷移方便）
 - **即時通訊：** Socket.io 或 Supabase Realtime
 - **檔案上傳：** Multer + Cloud Storage (S3 / GCS)
 - **搜尋引擎：** PostgreSQL Full-Text Search 或 Elasticsearch
@@ -278,7 +277,7 @@ Closed（已結案）
 ### 4. 資料庫
 
 - PostgreSQL
-- 使用 Prisma ORM / Supabase Schema
+- Supabase Schema
 - 具備外鍵約束與資料一致性檢查
 
 ### 5. 安全性要求
