--- a/專案製作規範.md
+++ b/專案製作規範.md
@@ -267,7 +267,7 @@ Closed（已結案）
   - 標籤使用統計（熱度排序）
   - 標籤追蹤與通知
 - **AI 模組**
-  - 專案摘要生成（OpenAI / Claude）
+  - 專案摘要生成（Google Gemini）
   - 技能標籤自動提取與建議
   - 專案分類建議
   - 標籤自動標記（根據專案內容）
